--- a/Zimmardi OSHA_PPP-rsw.Rmd
+++ b/Zimmardi OSHA_PPP-rsw.Rmd
@@ -1,88 +1,84 @@
 ---
 title: "PPP Data"
-author: "Abby Zimmardi"
-date: "1/20/2021"
+author: "Abby Zimmardi and Rob Wells"
+date: "1/27/2021"
 output: html_document
 ---
 
 ```{r}
 library(tidyverse)
-#install.packages("rio") 
+#install.packages("rio")
+#install.packages(dplyr)
+library(dplyr)
 ```
-#WELLS COMMENT: The next level in R is to make sure your data can be downloaded by anyone. This file is on your hard drive and I can't get to it. Better to put the file on your GitHub and download it from there so everyone can access the script and data. The problem is this is such a large file (130 mb) that it exceeds the GitHub storage of 25 mb. I'll ask Sean how to deal with this.
+
 ```{r}
 PPP <- rio::import('/Users/abbyzimmardi/Downloads/Data Spring 2021/OSHA/150k plus 0808/PPP Data 150k plus 080820.csv')
+
+#WELLS IMPORT:
+# PPP <- rio::import('/Users/rswells/Dropbox/Classes/Data Fall 2020/ArkansasCovid/PPP Loan Data 150k plus 0808/PPP Data 150k plus 080820.csv')
 ```
-
-#WELLS EDIT:
-```{r}
-PPP <- rio::import('/Users/rswells/Dropbox/Classes/Data Fall 2020/ArkansasCovid/PPP Loan Data 150k plus 0808/PPP Data 150k plus 080820.csv')
-```
-
-
 
 
 ```{r}
 PPP2 <- PPP %>% 
   filter(State == "AR")
+#PPP2
+```
+#Clean Names, Make everything in BusinessName have an underscore in between
+```{r}
+PPP2$BusinessName  <- gsub("[[:punct:]]", "", PPP2$BusinessName)
+PPP2$BusinessName  <- str_trim(PPP2$BusinessName, side =c("both"))
+PPP2$BusinessName <- str_replace_all(PPP2$BusinessName, pattern=fixed(' '), replacement=fixed('_') )
 PPP2
 ```
+
+
+
+
 ```{r}
-OSHA <- rio::import('/Users/abbyzimmardi/Downloads/Data Spring 2021/OSHA/AR Closed Complaints Jan. 13.xlsx')
-```
+# OSHA <- rio::import('/Users/abbyzimmardi/Downloads/Data Spring 2021/OSHA/AR Closed Complaints Jan. 13.xlsx')
+# OSHA
 
-
-
-#WELLS EDIT:
-```{r}
+#WELLS IMPORT
 OSHA <- rio::import('https://github.com/profrobwells/Spring2021Data/blob/main/closed_complaints_jan_13.xlsx?raw=true', which="AR")
 ```
 
-
-
-
+#Rename columns
 ```{r}
 OSHA <- OSHA %>%
-  rename(State = 'Site State', Address = 'Site Address 1', Zip = 'Site Zip', City = 'Site City')
+  rename(State = 'Site State', Address = 'Site Address 1', Zip = 'Site Zip', City = 'Site City', BusinessName = 'Estab Name')
 OSHA
 ```
+#WELLS EDIT
+#clean
+#Make everything have an underscore in between
 ```{r}
-#install.packages(dplyr)
-library(dplyr)
-```
-#Join the tables
-newtable <- inner_join(table1, table2, by=c("fieldname"="fieldname"))
-```{r}
-OSHA_PPP <- inner_join(PPP2, OSHA, by=c('Address"="Address"))
+OSHA$BusinessName<- gsub("[[:punct:]]", "", OSHA$BusinessName)
+OSHA$BusinessName <- str_trim(OSHA$BusinessName, side =c("both"))
+#This is the power cleaner command!!!
+OSHA$BusinessName<- str_replace_all(OSHA$BusinessName, pattern=fixed(' '), replacement=fixed('_') )
+OSHA$BusinessName = toupper(OSHA$BusinessName)
+OSHA
+
 ```
 
-#WELLS EDIT
-#WELLS EDIT
-```{r}
-head(PPP2$BusinessName)
-```
-
-```{r}
-OSHA <- OSHA %>%
-  rename(BusinessName = `Estab Name`)
-head(OSHA)
-```
 
 #JOIN BY NAME 
+#Seven Matches!!!
 ```{r}
 OSHA_PPP <- inner_join(PPP2, OSHA, by=c("BusinessName"="BusinessName"))
 ```
 
 
-#You will need to clean either the business names or the addresses to make them match.
-#See this tutorial and we can discuss.
-https://profrobwells.github.io/HomelessSP2020/SF_311_Calls_UofA.html#part_3:_cleaning_dispositions
 
+#Additional Strategies
+--duplicate business names into a new column and do a radical cleaning for both
+OSHA$BizName2 <- OSHA$BusinessName
+PPP$BizName2 ....
 
+--use this to get rid of LLC and INC in both business names.
 
-
-
-
-
+OSHA$BizName2<- str_replace_all(OSHA$BizName2, pattern=fixed('_INC'), replacement=fixed('') )
 
 
