--- a/Occupation Data Hennigan_Wells.rmd
+++ b/Occupation Data Hennigan_Wells.rmd
@@ -102,17 +102,13 @@ glimpse(occupation5_25)
 ```
 
 ```{r warning=FALSE}
-#Wells Note: IMPORTANT
-
-#Missing numerous tables from above. Wells fixed. Always put in sequential order to see the gaps
-
+#Wells Note: 19 sheets, May 25-Aug 20
 #Changed name to occupation_may_august to better keep track
-
+#This is the Misty file
 
 occupation_may_august <- smartbind(occupation5_25, occupation5_29, occupation6_2, occupation6_5,  occupation6_9, occupation6_12, occupation6_14, occupation6_18, occupation6_25, occupation6_28, occupation7_3, occupation7_6, occupation7_14, occupation7_21, occupation7_24,occupation8_3, occupation8_7,  occupation8_10, occupation8_20)
 
-#Wells note: Add this step so we can combine the two DFs later
-#Clean and Normalize Names
+
 occupation_may_august <- clean_names(occupation_may_august)
 
 #This combines 19 occupational data sheets from May 25 through Aug 20
@@ -135,6 +131,17 @@ write.csv(occupation_may_august, "occupationalmay_august.csv")
 ##pull in the sheets
 #This section for building the table from individual sheets
 ```{r include=FALSE}
+occupation8_17 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.17")
+occupation8_24 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.24")
+occupation8_27 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.27")
+occupation8_31 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.31")
+occupation9_3 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.3")
+occupation9_7 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.7")
+occupation9_9 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.9")
+occupation9_14 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.14")
+occupation9_17 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.17")
+occupation9_24 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.24")
+occupation9_28 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.28")
 occupation10_1 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.1")
 occupation10_5 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.5")
 occupation10_8 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.8")
@@ -144,15 +151,6 @@ occupation10_19 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupati
 occupation10_22 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.22")
 occupation10_26 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.26")
 occupation10_29 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 10.29")
-occupation9_3 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.3")
-occupation9_7 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.7")
-occupation9_9 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.9")
-occupation9_14 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.14")
-occupation9_28 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 9.28")
-occupation8_17 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.17")
-occupation8_24 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.24")
-occupation8_27 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.27")
-occupation8_31 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 8.31")
 occupation11_2 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 11.02")
 occupation11_5 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 11.05")
 occupation11_9 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 11.09")
@@ -164,6 +162,7 @@ occupation11_26 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupati
 occupation11_30 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 11.30")
 occupation12_3 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.3")
 occupation12_7 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.7")
+occupation12_10 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.10")
 occupation12_14 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.14")
 occupation12_17 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.17")
 occupation12_21 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 12.21")
@@ -178,13 +177,25 @@ occupation1_18 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupatio
 occupation1_21 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 1.21")
 occupation1_25 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 1.25")
 occupation1_28 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 1.28")
-#Add new dates here
 occupation2_1 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 2.01")
-
+occupation2_4 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 2.04")
+occupation2_8 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 2.08")
+occupation2_11 <- rio::import("Occupationals from PDFs.xlsx", which = "Occupational 2.11")
+#Add new dates here
 ```
 
 #Clean and Normalize Names
 ```{r include=FALSE}
+occupation8_17 <- clean_names(occupation8_17)
+occupation8_24 <- clean_names(occupation8_24)
+occupation8_27 <- clean_names(occupation8_27)
+occupation8_31 <- clean_names(occupation8_31)
+occupation9_3 <- clean_names(occupation9_3)
+occupation9_7 <- clean_names(occupation9_7)
+occupation9_9 <- clean_names(occupation9_9)
+occupation9_14 <- clean_names(occupation9_14)
+occupation9_24 <- clean_names(occupation9_24)
+occupation9_28 <- clean_names(occupation9_28)
 occupation10_1 <- clean_names(occupation10_1)
 occupation10_5 <- clean_names(occupation10_5)
 occupation10_8 <- clean_names(occupation10_8)
@@ -194,15 +205,6 @@ occupation10_19 <- clean_names(occupation10_19)
 occupation10_22 <- clean_names(occupation10_22)
 occupation10_26 <- clean_names(occupation10_26)
 occupation10_29 <- clean_names(occupation10_29)
-occupation9_3 <- clean_names(occupation9_3)
-occupation9_7 <- clean_names(occupation9_7)
-occupation9_9 <- clean_names(occupation9_9)
-occupation9_14 <- clean_names(occupation9_14)
-occupation9_28 <- clean_names(occupation9_28)
-occupation8_17 <- clean_names(occupation8_17)
-occupation8_24 <- clean_names(occupation8_24)
-occupation8_27 <- clean_names(occupation8_27)
-occupation8_31 <- clean_names(occupation8_31)
 occupation11_2 <- clean_names(occupation11_2)
 occupation11_5 <- clean_names(occupation11_5)
 occupation11_9 <- clean_names(occupation11_9)
@@ -212,16 +214,15 @@ occupation11_19 <- clean_names(occupation11_19)
 occupation11_23 <- clean_names(occupation11_23)
 occupation11_26 <- clean_names(occupation11_26)
 occupation11_30 <- clean_names(occupation11_30)
-
 occupation12_3 <- clean_names(occupation12_3)
 occupation12_7 <- clean_names(occupation12_7)
+occupation12_10 <- clean_names(occupation12_10)
 occupation12_14 <- clean_names(occupation12_14)
 occupation12_17 <- clean_names(occupation12_17)
 occupation12_21 <- clean_names(occupation12_21)
 occupation12_24 <- clean_names(occupation12_24)
 occupation12_28 <- clean_names(occupation12_28)
 occupation12_31 <- clean_names(occupation12_31)
-
 occupation1_4 <- clean_names(occupation1_4)
 occupation1_7 <- clean_names(occupation1_7)
 occupation1_11 <- clean_names(occupation1_11)
@@ -231,6 +232,10 @@ occupation1_21 <- clean_names(occupation1_21)
 occupation1_25 <- clean_names(occupation1_25)
 occupation1_28 <- clean_names(occupation1_28)
 occupation2_1 <- clean_names(occupation2_1)
+occupation2_4 <- clean_names(occupation2_4)
+occupation2_8 <- clean_names(occupation2_8)
+occupation2_11 <- clean_names(occupation2_11)
+
 #add the most recent dates here
 ```
 
@@ -238,9 +243,11 @@ occupation2_1 <- clean_names(occupation2_1)
 #Combine through 9-14
 #This creates an employer db from Aug 17-Sept 14
 ```{r warning=FALSE}
+#Poultry and nonpoultry combined
+#Poultry - nonpoultry ends on Sept 14
+employer_masterAugSept <- smartbind(occupation8_17, occupation8_24, occupation8_27, occupation8_31, occupation9_3, occupation9_7, occupation9_9, occupation9_14)
 
-employer_masterAugSept <- smartbind(occupation8_17, occupation8_24, occupation8_27, occupation8_31, occupation9_14, occupation9_3, occupation9_7, occupation9_9)
-
+employer_masterAugSept <- clean_names(employer_masterAugSept)
 #dates
 employer_masterAugSept$date <- ymd(employer_masterAugSept$date)
 
@@ -253,10 +260,52 @@ employer_masterAugSept <- separate(data = employer_masterAugSept, col = employer
 ```
 
 
-#This creates an industry db from Sept 28-Feb 1, 2021. 
+#This creates an industry db from Sept 28-Feb 11, 2021. 
 ```{r warning=FALSE}
 #This creates an industry db from Sept 28-Feb 1, 2021. It lacks the Employer Names
-industry_master <- smartbind(occupation2_1, occupation1_28, occupation1_25, occupation1_11, occupation1_7, occupation1_4, occupation12_31, occupation12_28, occupation12_3, occupation12_24, occupation12_21, occupation12_17, occupation12_14, occupation11_9, occupation11_5, occupation11_30, occupation11_26, occupation11_23, occupation11_2, occupation11_19, occupation11_16, occupation11_12, occupation10_8, occupation10_5, occupation10_29, occupation10_22, occupation10_19, occupation10_26, occupation10_15, occupation10_12, occupation10_1, occupation12_7, occupation9_28, occupation1_21, occupation1_18, occupation1_14)
+#Redo and sort in order later
+industry_master <- smartbind(occupation2_11, 
+                             occupation2_8, 
+                             occupation2_4, 
+                             occupation2_1, 
+                             occupation1_28, 
+                             occupation1_25, 
+                             occupation1_21, 
+                             occupation1_18, 
+                             occupation1_14,
+                             occupation1_11, 
+                             occupation1_7, 
+                             occupation1_4, 
+                             occupation12_31, 
+                             occupation12_28, 
+                             occupation12_24, 
+                             occupation12_21, 
+                             occupation12_17, 
+                             occupation12_14,
+                             occupation12_10, 
+                             occupation12_7, 
+                             occupation12_3,
+                             occupation11_30, 
+                             occupation11_26, 
+                             occupation11_23, 
+                             occupation11_19, 
+                             occupation11_16, 
+                             occupation11_12, 
+                             occupation11_9, 
+                             occupation11_5, 
+                             occupation11_2, 
+                             occupation10_29, 
+                             occupation10_22, 
+                             occupation10_19, 
+                             occupation10_26, 
+                             occupation10_15, 
+                             occupation10_12, 
+                             occupation10_8, 
+                             occupation10_5, 
+                             occupation10_1, 
+                             occupation9_28, 
+                             occupation9_24,
+                             occupation9_17)
 
 #occupation_master2 <- occupation_master2[ -c(3,4,5,6) ]
 
